--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+hw/1sem/task_4/data/subtask_7_arrays_arr1.txt
+hw/1sem/task_4/data/subtask_7_arrays_arr2.txt
+hw/1sem/task_4/data/subtask_7_arrays_res.txt
